--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-    "name": "pagaleve/pagaleve-magento2-extension",
+    "name": "pagaleve/pagaleve-magento2-module",
     "description": "2",
     "type": "magento2-module",
     "version": "1.0.0",
+    "minimum-stability": "dev",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
@@ -18,7 +19,10 @@
         }
     ],
     "require": {
-        "php": "~7.3.0"
+        "php": "~7.3.0",
+        "magento/module-payment": "100.1.*|^100.2|^100.3|^100.4",
+        "magento/module-sales": "100.1.*|~101.0|~102.0|~103.0",
+        "magento/framework": "100.1.*|~101.0|^102.0.3|^103.0"
     },
     "autoload": {
         "files": [
