--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "~7.3.0||~7.4.0",
+        "php" : ">=7.3",
         "magento/module-payment": "100.1.*|^100.2|^100.3|^100.4",
         "magento/module-sales": "100.1.*|~101.0|~102.0|~103.0",
         "magento/framework": "100.1.*|~101.0|^102.0.3|^103.0"
